# GM_HW3

./: latent_space_analysis.py  main.py  main_bernouilli.py  main_categorical.py  modules.py  modules_bernoulli.py  modules_beta.py  modules_categorical.py  pyproject.toml
task_1/: main.py  modules.py
task_2/: VAE_bernoulli_16_dimensional  VAE_beta_16_dimensional  VAE_categorical_16_dimensional  main_bernouilli.py  main_beta.py  main_categorical.py  modules_bernoulli.py  reconstructions_bernoulli.py  reconstructions_beta.py  reconstructions_categorical.py
task_3/: latent_space_analysis.py
task_4/: VAE_gaussian_16_dimensional_constant_var  VAE_gaussian_16_task4  main.py  main_4a.py  main_4b.py  modules.py  modules_4a.py  modules_4b.py
