[tool.poetry]
name = "homework 3"
version = "0.1.0"
description = ""
authors = ["Wouter Nuijten"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
matplotlib = "^3.4.2"
numpy = "^1.20.3"
scikit-learn = "^0.24.2"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
